--- a/style.css
+++ b/style.css
@@ -1,4 +1,15 @@
+@import url('https://keystone-games.github.io/assets/fonts/monsterrat.ttf')
+
+@font-face {
+  font-family: 'monsterrat';
+  src: url('https://keystone-games.github.io/assets/fonts/monsterrat.ttf');
+}
+
 body {
   background: rgb(153,85,255);
   background: linear-gradient(90deg, rgba(153,85,255,1) 0%, rgba(255,64,0,1) 100%);
+}
+
+.title {
+  font-family: 'monsterrat', sans-serif;
 }
