--- a/style.css
+++ b/style.css
@@ -13,3 +13,9 @@ body {
 .title {
   font-family: 'monsterrat', sans-serif;
 }
+
+.center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
