--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
   background: linear-gradient(90deg, rgba(153,85,255,1) 0%, rgba(255,64,0,1) 100%);
 }
 
-.title {
+* {
   font-family: 'monsterrat', sans-serif;
 }
 
