work on a lot of stuff

--- a/style.css
+++ b/style.css
@@ -1,17 +1,20 @@
-@import url('https://keystone-games.github.io/assets/fonts/monsterrat.ttf')
-
+@import url("https://keystone-games.github.io/assets/fonts/monsterrat.ttf")
 @font-face {
-  font-family: 'monsterrat';
-  src: url('https://keystone-games.github.io/assets/fonts/monsterrat.ttf');
+  font-family: "monsterrat";
+  src: url("https://keystone-games.github.io/assets/fonts/monsterrat.ttf");
 }
 
 body {
-  background: rgb(153,85,255);
-  background: linear-gradient(90deg, rgba(153,85,255,1) 0%, rgba(255,64,0,1) 100%);
+  background: rgb(153, 85, 255);
+  background: linear-gradient(
+    90deg,
+    rgba(153, 85, 255, 1) 0%,
+    rgba(255, 64, 0, 1) 100%
+  );
 }
 
 * {
-  font-family: 'monsterrat', sans-serif;
+  font-family: "monsterrat", sans-serif;
 }
 
 .center {
@@ -33,8 +36,8 @@ gh-langs {
 }
 
 button {
-  background-color: #9955FF;
-  border: #0000FF;
+  background-color: #9955ff;
+  border: #0000ff;
   color: white;
   padding: 15px 32px;
   text-align: center;
