--- a/style.css
+++ b/style.css
@@ -23,6 +23,12 @@ body {
   justify-content: center;
 }
 
+#main-content {
+  display:flex;
+  align-items:center;
+  justify-content:center;
+}
+
 iframe {
   border: none;
 }
