--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@
 body {
 	background-color: #000;
 	background: linear-gradient(90deg,
-			rgba(153, 85, 255, 0.5) 0%,
-			rgba(255, 64, 0, 0.5) 100%);
+			#4c2a7f 0%,
+			#7f2000 100%);
 }
 
 * {
