--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 }
 
 * {
-	font-family: "Monsterrat", sans-serif;
+	font-family: "Trebuchet MS", "Ubuntu", "Monsterrat", sans-serif;
 	color: #fff;
 }
 
