--- a/style.css
+++ b/style.css
@@ -29,3 +29,10 @@ p {
 	top: 0;
 	z-index: 1;
 }
+
+.align-center {
+	align-content: center;
+	align-items: center;
+	display: flex;
+	justify-content: center;
+}
